# titanlib

./: .gitignore  CMakeLists.txt  COPYING  README.md  deps.yml  setup_centos
.github/workflows/: ccpp.yml  main.yml  package.yml
SWIG/: CMakeLists.txt  titanlib.i
SWIG/R/: CMakeLists.txt
SWIG/python/: CMakeLists.txt  setup.in.py
cmake/: FindPROJ4.cmake
debian/: changelog  control  copyright  watch
docs/: DoxygenLayout.xml  config.in  index.html
docs/0.2.0/: README_8md.html  buddy__check_8cpp.html  buddy__event__check_8cpp.html  classtitanlib_1_1Dataset-members.html  classtitanlib_1_1Dataset.html  classtitanlib_1_1KDTree-members.html  classtitanlib_1_1KDTree.html  dataset_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  index.html  isolation__check_8cpp.html  kdtree_8cpp.html  lag__reduction__filter_8cpp.html  md__home_thomasn_repos_titanlib0_README.html  namespacetitanlib.html  namespacetitanlib_1_1util.html  pages.html  range__check_8cpp.html  sct_8cpp.html  titanlib_8cpp.html  titanlib_8h.html  titanlib_8h_source.html  util_8cpp.html
docs/0.3.0/: README_8md.html  annotated.html  background_8cpp.html  buddy__check_8cpp.html  buddy__event__check_8cpp.html  classes.html  classgridpp_1_1BarnesStructure-members.html  classgridpp_1_1BarnesStructure.html  classgridpp_1_1BoxCox-members.html  classgridpp_1_1BoxCox.html  classgridpp_1_1CressmanStructure-members.html  classgridpp_1_1CressmanStructure.html  classgridpp_1_1CrossValidation-members.html  classgridpp_1_1CrossValidation.html  classgridpp_1_1Grid-members.html  classgridpp_1_1Grid.html  classgridpp_1_1Identity-members.html  classgridpp_1_1Identity.html  classgridpp_1_1KDTree-members.html  classgridpp_1_1KDTree.html  classgridpp_1_1Log-members.html  classgridpp_1_1Log.html  classgridpp_1_1MultipleStructure-members.html  classgridpp_1_1MultipleStructure.html  classgridpp_1_1Point-members.html  classgridpp_1_1Point.html  classgridpp_1_1Points-members.html  classgridpp_1_1Points.html  classgridpp_1_1StructureFunction-members.html  classgridpp_1_1StructureFunction.html  classgridpp_1_1Transform-members.html  classgridpp_1_1Transform.html  classgridpp_1_1VariedStructure-members.html  classgridpp_1_1VariedStructure.html  classgridpp_1_1not__implemented__exception-members.html  classgridpp_1_1not__implemented__exception.html  classtitanlib_1_1Dataset-members.html  classtitanlib_1_1Dataset.html  classtitanlib_1_1KDTree-members.html  classtitanlib_1_1KDTree.html  (+74 more)
docs/0.3.1/: README_8md.html  background_8cpp.html  buddy__check_8cpp.html  buddy__event__check_8cpp.html  classgridpp_1_1BarnesStructure-members.html  classgridpp_1_1BarnesStructure.html  classgridpp_1_1BoxCox-members.html  classgridpp_1_1BoxCox.html  classgridpp_1_1CressmanStructure-members.html  classgridpp_1_1CressmanStructure.html  classgridpp_1_1CrossValidation-members.html  classgridpp_1_1CrossValidation.html  classgridpp_1_1Grid-members.html  classgridpp_1_1Grid.html  classgridpp_1_1Identity-members.html  classgridpp_1_1Identity.html  classgridpp_1_1KDTree-members.html  classgridpp_1_1KDTree.html  classgridpp_1_1Log-members.html  classgridpp_1_1Log.html  classgridpp_1_1MultipleStructure-members.html  classgridpp_1_1MultipleStructure.html  classgridpp_1_1Point-members.html  classgridpp_1_1Point.html  classgridpp_1_1Points-members.html  classgridpp_1_1Points.html  classgridpp_1_1StructureFunction-members.html  classgridpp_1_1StructureFunction.html  classgridpp_1_1Transform-members.html  classgridpp_1_1Transform.html  classgridpp_1_1not__implemented__exception-members.html  classgridpp_1_1not__implemented__exception.html  classtitanlib_1_1Dataset-members.html  classtitanlib_1_1Dataset.html  classtitanlib_1_1KDTree-members.html  classtitanlib_1_1KDTree.html  classtitanlib_1_1Point-members.html  classtitanlib_1_1Point.html  classtitanlib_1_1Points-members.html  classtitanlib_1_1Points.html  (+41 more)
docs/0.3.3/: README_8md.html  background_8cpp.html  buddy__check_8cpp.html  buddy__event__check_8cpp.html  classtitanlib_1_1Dataset-members.html  classtitanlib_1_1Dataset.html  classtitanlib_1_1KDTree-members.html  classtitanlib_1_1KDTree.html  classtitanlib_1_1Point-members.html  classtitanlib_1_1Point.html  classtitanlib_1_1Points-members.html  classtitanlib_1_1Points.html  dataset_8cpp.html  fgt_8cpp.html  (+32 more)
include/: sct_smart_boxes.h  titanlib.h
python/: CMakeLists.txt  MANIFEST.in  setup.in.py
src/: CMakeLists.txt  background.cpp  buddy_check.cpp  buddy_check_alt.cppwait  buddy_check_dual.cppwait  buddy_event_check.cpp  cmake_install.cmake  dataset.cpp  duplicate_check.cpp  fgt.cpp  first_guess_check.cpp  isolation_check.cpp  kdtree.cpp  lag_reduction_filter.cpp  metadata_check.cpp  point.cpp  points.cpp  range_check.cpp  sct.cpp  sct.cpp.bak  sct.cpp.bak1  sct.cpp_modifiedCristian  sct.cpp_modifiedCristian_new  sct.cpp_originalThomas  sct_dual.cpp  sct_dual.cppwait  sct_dual_with_fg.cpp  sct_mod.c  sct_old.cpp  sct_resistant.cpp  sct_rewrite.cpp  sct_smart_boxes.c  sct_window.cpp  sct_with_fg.cpp  swig.cpp  titanlib.cpp  util.cpp
src/swig/python/: CMakeLists.txt  setup.in.py
src/tests/: bulk_test.py  dataset_test.py  range_check_test.py  sct_test.py
swig/: .gitignore  README.rst  example.h  makefile  titanlib.cpp  titanlib.h  titanlib.i
swig/R/: CMakeLists.txt
swig_prototype/: .gitignore  CMakeLists.txt  README.rst  makefile
swig_prototype/Python/: setup.py
swig_prototype/src/: CMakeLists.txt
swig_prototype/src/swig/python/: CMakeLists.txt
swig_prototype/swig/: titanlib.i
swig_prototype/swig/python/: CMakeLists.txt  setup.in.py
tests/: .RData  .Rhistory  background_test.py  benchmark.py  buddy_check_test.py  buddy_check_test.r  buddy_event_check_test.py  bulk_test.py  check_installation.py  climatology_check_test.py  dataset_test.py  duplicate_check.py  fgt_test.py  fgt_test.r  first_guess_check.py  isolation_test.py  kdtree_test.py  range_check_test.py  sct_dual_test.py  sct_dual_test.r  sct_old_test.py  sct_resistant_test.py  sct_resistant_test.r  sct_test.py  sct_test.r  util.py  util_test.py
(+219 files in other folders)
